// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatternLockV1 test Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component component"
  >
    <div
      class="message"
    />
    <div
      class="forgotBtn forgotBtn hiddenBtn"
    />
  </div>
</div>
`;

exports[`PatternLockV1 test Snapshot tests should match snapshot with error prop 1`] = `
<div>
  <div
    class="component component"
  >
    <div
      class="message error"
    >
      Error message
    </div>
    <div
      class="forgotBtn forgotBtn hiddenBtn"
    />
  </div>
</div>
`;
